--- a/wms-server/wms-request-handler/pom.xml
+++ b/wms-server/wms-request-handler/pom.xml
@@ -81,7 +81,17 @@
             <artifactId>xstream</artifactId>
             <version>1.4.21</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.12.13</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-prometheus -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.12.13</version>
+        </dependency>
     </dependencies>
 
     <build>
