--- a/wms-server/tile-storage-server/pom.xml
+++ b/wms-server/tile-storage-server/pom.xml
@@ -79,7 +79,17 @@
             <artifactId>gdal</artifactId>
             <version>3.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.15</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
@@ -131,7 +141,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>hse.tsantsaridi.logic.geotiff.GetTilesManager</mainClass>
+                                    <mainClass>hse.tsantsaridi.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
